--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,6 +17,7 @@
     "aos": "3.0.0-beta.6",
     "lucide-react": "^0.503.0",
     "next": "15.1.6",
+    "next-sitemap": "^4.2.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -29,9 +31,5 @@
     "@types/aos": "^3.0.7",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.3"
-  },
-  "overrides": {
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.1"
   }
 }
